# tfc

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml
cl_dll/: ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  com_weapons.cpp  com_weapons.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  flashlight.cpp  health.cpp  health.h  hud.cpp  hud.h  hud_msg.cpp  hud_redraw.cpp  in_camera.cpp  saytext.cpp  status_icons.cpp  train.cpp  vgui_ScorePanel.cpp  vgui_TeamFortressViewport.cpp  view.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
client/: StudioModelRenderer.cpp  ammo.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  cdll_int.cpp  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  entity.cpp  ev_hldm.cpp  ev_hldm.h  hud.cpp  hud.h  hud_msg.cpp  hud_redraw.cpp  in_camera.cpp  input.cpp  inputw32.cpp  saytext.cpp  statusbar.cpp  tri.cpp  vgui_ScorePanel.cpp  vgui_ScorePanel.h  vgui_SpectatorPanel.cpp  vgui_TeamFortressViewport.cpp  vgui_TeamFortressViewport.h  view.cpp  voice_status.cpp
client/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
client/particleman/: CBaseParticle.cpp  CMiniMem.cpp  particleman_internal.h
common/: Platform.h  Sequence.h  const.h
dlls/: airtank.cpp  animating.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.h  combat.cpp  crossbow.cpp  crowbar.cpp  effects.cpp  egon.cpp  explode.cpp  func_break.cpp  game.cpp  gamerules.cpp  gamerules.h  gauss.cpp  ggrenade.cpp  glock.cpp  h_cycler.cpp  handgrenade.cpp  healthkit.cpp  hornet.cpp  hornet.h  hornetgun.cpp  mortar.cpp  mp5.cpp  multiplay_gamerules.cpp  nodes.cpp  observer.cpp  player.cpp  player.h  python.cpp  rpg.cpp  satchel.cpp  shotgun.cpp  singleplay_gamerules.cpp  skill.h  soundent.cpp  (+13 more)
engine/: APIProxy.h  custom.h  shake.h
game/: delta.lst  halflife.fgd  titles.txt  user.scr
game/resource/: mod_english.txt
game_shared/: shared_util.cpp  vgui_loadtga.cpp  voice_gamemgr.cpp
game_shared/bot/: bot.cpp  bot.h  bot_manager.cpp  bot_manager.h  bot_profile.cpp  bot_util.cpp  bot_util.h  hl_bot.cpp  hl_bot_manager.cpp  hl_bot_manager.h  nav.h  nav_area.cpp  nav_area.h  nav_file.cpp  nav_node.h  nav_path.cpp
include/common/: com_model.h  const.h  demo_api.h  event_api.h  event_args.h  event_flags.h  hltv.h  in_buttons.h  mathlib.h  net_api.h  r_efx.h  r_studioint.h  ref_params.h  triangleapi.h
include/engine/: APIProxy.h  edict.h  eiface.h  progdefs.h  progs.h
include/public/: FileSystem.h
linux/: Makefile  Makefile.hl_cdll  Makefile.hldll
mod/: BotProfile.db  delta.lst  liblist.gam  settings.scr  titles.txt  user.scr
mod/resource/: mod_english.txt
mod/sprites/: hud.txt
network/: delta.lst
pm_shared/: gamemovement.cpp  gamemovement.h  gamemovement_walk.cpp  pm_shared.cpp  pm_shared.h
server/: UserMessages.cpp  UserMessages.h  airtank.cpp  animating.cpp  animation.cpp  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.h  combat.cpp  crossbow.cpp  crowbar.cpp  doors.cpp  effects.cpp  effects.h  egon.cpp  enginecallback.h  explode.cpp  func_break.cpp  func_break.h  func_tank.cpp  game.cpp  game.h  gamerules.cpp  gamerules.h  gauss.cpp  ggrenade.cpp  glock.cpp  h_battery.cpp  h_cycler.cpp  handgrenade.cpp  healthkit.cpp  hornet.cpp  hornet.h  hornetgun.cpp  items.cpp  items.h  (+39 more)
shared/: pm_shared.h  weapons_shared.cpp
src/client/: Exports.h  cdll_int.cpp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  demo.cpp  entity.cpp  ev_common.cpp  ev_hldm.cpp  eventscripts.h  global_consts.h  parsemsg.h  player_info.h  studio_util.cpp  studio_util.h  util.cpp  view.cpp  view.h  view_spec.cpp
src/client/entities/: hl_baseentity.cpp  hl_objects.cpp  hl_weapons.cpp  player_client.cpp  weapons_client.cpp
src/client/input/: in_camera.cpp  in_joystick.cpp  in_keyboard.cpp  in_mouse.cpp  input.cpp  inputw32.cpp
src/client/rendering/: GameStudioModelRenderer.cpp  StudioModelRenderer.cpp  StudioModelRenderer.h  tri.cpp
src/client/ui/: voice_status.cpp  voice_status.h
src/server/: UserMessages.cpp  UserMessages.h  cdll_dll.h  client.cpp  client.h  enginecallback.h  extdll.h  game.cpp  game.h  h_export.cpp  nodes.cpp  nodes.h  saverestore.cpp  saverestore.h  skill.h  tent.cpp  util.cpp  util.h  vector.h  voice_gamemgr.cpp  voice_gamemgr.h  vote_manager.cpp  vote_manager.h  vote_poll.cpp
src/server/bot/: bot.cpp  bot.h  bot_constants.h  bot_manager.cpp  bot_manager.h  bot_profile.cpp  bot_profile.h  bot_util.cpp  bot_util.h  hl_bot.cpp  hl_bot.h  hl_bot_manager.cpp  improv.h  nav.h  nav_area.cpp  nav_area.h  nav_file.cpp  nav_node.cpp  nav_node.h  nav_path.cpp  nav_path.h  simple_state_machine.h
src/server/entities/: animating.cpp  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  combat.cpp  doors.cpp  effects.cpp  effects.h  explode.cpp  explode.h  flame.cpp  func_break.cpp  func_break.h  func_tank.cpp  ggrenade.cpp  h_battery.cpp  h_cycler.cpp  healthkit.cpp  items.cpp  items.h  lights.cpp  maprules.cpp  monstermaker.cpp  mortar.cpp  nail.cpp  observer.cpp  pathcorner.cpp  pipebomb.cpp  plats.cpp  player.cpp  player.h  rocket.cpp  sound.cpp  spectator.cpp  spectator.h  subs.cpp  tf_building.cpp  tf_detpack.cpp  tf_goal.cpp  (+12 more)
src/server/gamerules/: gamerules.cpp  gamerules.h  mapcycle.cpp  multiplay_gamerules.cpp  singleplay_gamerules.cpp  teamplay_gamerules.cpp  teamplay_gamerules.h  tf_gamerules.cpp  tf_gamerules.h
src/shared/: animation.cpp  animation.h  monsterevent.h  tf_defs.cpp  tf_defs.h  trace.cpp  trace.h
src/shared/entities/: animating.cpp  crowbar.cpp  mp5.cpp  player_shared.cpp  tf_assault.cpp  tf_axe.cpp  tf_builder.cpp  tf_detpack.cpp  tf_pipebomb.cpp  tf_sniper.cpp  tf_weapons.cpp  weapons_shared.cpp
src/shared/movement/: gamemovement.cpp  gamemovement.h  gamemovement_climb.cpp  gamemovement_duck.cpp  gamemovement_swim.cpp  gamemovement_walk.cpp  pm_debug.cpp  pm_defs.h  pm_math.cpp  pm_shared.cpp  pm_shared.h
src/shared/utils/: filesystem_utils.cpp  shared_util.cpp  shared_util.h  steam_utils.cpp  (+1 more)
(+47 files in other folders)
